# TeeApi

./: .gitmodules  README.md
.github/workflows/: contracts-test.yml  docker-build.yml
contracts/: foundry.toml
contracts/script/: DeployConsumer.s.sol  DeployOracle.s.sol  MakeRequest.s.sol  MakeRequestEncrypted.s.sol  ReadLastTODO.s.sol  SetOraclePublicKey.s.sol
contracts/script/examples/: FlightDelayInsurance.s.sol
contracts/src/: Oracle.sol  RestApiClient.sol
contracts/src/examples/: ExampleConsumer.sol  FlightDelayInsurance.sol
contracts/src/interfaces/: IOracle.sol  IRestApiConsumer.sol
contracts/src/libraries/: ResponseLib.sol
contracts/test/: Oracle.t.sol
tee/: .dockerignore  Dockerfile  app.py  compose.yaml  main.py  pyproject.toml
tee/config/: __init__.py  settings.py
tee/models/: __init__.py  request.py  response.py
tee/services/: __init__.py  api_client.py  api_server.py  blockchain.py  response_processor.py
tee/utils/: __init__.py  abi.py  crypto.py  encrypt_value.py  generate_keys.py  helpers.py  logging.py
tee/utils/abis/: Oracle.json
